--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rehype-unwrap-images": "^1.0.0",
     "remark-directive": "^4.0.0",
     "remark-math": "^6.0.0",
+    "rss-parser": "^3.13.0",
     "sanitize-html": "^2.17.0",
     "satori": "^0.18.2",
     "satori-html": "^0.3.2",
