--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,37 +1,66 @@
 name: Deploy Astro to GitHub Pages
+
 on:
+  workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ main, master ]   # 同时兼容 main/master
+
 permissions:
   contents: read
   pages: write
   id-token: write
+
 concurrency:
   group: pages
   cancel-in-progress: true
+
+env:
+  # 如是 monorepo，把这里改成子目录，例如 apps/site
+  WORKDIR: .
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build
-      - run: |
-          ls -la dist | sed -n '1,200p'
-          test -f dist/CNAME || (echo "CNAME not found in dist!" && exit 1)
+          cache-dependency-path: ${{ env.WORKDIR }}/package-lock.json
+
+      - name: Install deps
+        working-directory: ${{ env.WORKDIR }}
+        run: npm ci
+
+      - name: Build
+        working-directory: ${{ env.WORKDIR }}
+        run: npm run build   # Astro 默认输出 dist/；如你改过输出目录，这里一起改
+
+      # 可选 CNAME：仅当设置了仓库级变量 PAGES_CNAME 时才写入
+      - name: Write CNAME (optional)
+        if: ${{ vars.PAGES_CNAME != '' }}
+        run: |
+          echo "${{ vars.PAGES_CNAME }}" > ${{ env.WORKDIR }}/dist/CNAME
+          echo "CNAME = ${{ vars.PAGES_CNAME }}"
+
+      - name: Sanity check output (non-fatal)
+        run: |
+          ls -la ${{ env.WORKDIR }}/dist | sed -n '1,200p'
+          # 不再强制退出；仅提示
+          test -f ${{ env.WORKDIR }}/dist/CNAME && echo "CNAME present" || echo "CNAME not present (ok)"
+
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: ${{ env.WORKDIR }}/dist
+
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - id: deployment
         uses: actions/deploy-pages@v4
